2008-12-05  Jonathon Jongsma  <jonathon@quotidian.org>

	* cairomm/scaledfont.cc: Fix an error in ScaledFont::get_font_face() where
	we were releasing a reference we didn't hold.
	Also fix a rather severe memory leak where we weren't calling
	cairo_scaled_font_destroy in the ScaledFont destructor.  I added a virtual
	destructor to ScaledFont, which theoretically changes ABI, but I don't see how
	anybody could be using ScaledFont in cairomm currently without serious memory
	leaks, so I think it's worthwhile to make this change

2008-11-14  Jonathon Jongsma  <jonathon@quotidian.org>

	* cairomm/win32_surface.cc:
	* cairomm/win32_surface.h: fix a bunch of compile errors in the win32 surface
	as reported by Paul Goins <general vultaire.net>

2008-11-14  Jonathon Jongsma  <jonathon@quotidian.org>

	* configure.in: support the --with-boost=[boost_path] option for specifying
	the install path of boost libraries

2008-10-30  Dave Evans <devans@macports.org>

	* cairomm/fontface.h:
	* cairomm/surface.h: fix compile in mac osx by undefining the 'nil' symbol
	before including any sigc++ headers.  In the future this should become
	necessary if sigc++ headers do this directly, but for now work around it in
	cairomm

2008-10-29  Jonathon Jongsma  <jonathon@quotidian.org>

	* Makefile.am: distribute autogen.sh with the tarballs

2008-10-25  Jonathon Jongsma  <jonathon@quotidian.org>

	* configure.in:
	* data/Makefile.am:
	* tests/Makefile.am: fix some distcheck failures (pkg-config files and
	unit-test-generated images were not removed on distclean)

2008-10-25  Jonathon Jongsma  <jonathon@quotidian.org>

	* NEWS: explicitly mention that 1.7.0 is an unstable release

2008-10-22  Jonathon Jongsma  <jonathon@quotidian.org>

	* NEWS: add news for 1.7.x release

2008-10-22  Jonathon Jongsma  <jonathon@quotidian.org>

	* cairomm/matrix.h: add a link to the cairo reference for cairo_matrix_t
	* docs/reference/Doxyfile.in: don't generate docs for the members of the